Bug 148959 - Calc: Transparency of axis font not saved
Summary: Calc: Transparency of axis font not saved
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.3.1 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2022-05-06 05:52 UTC by Stefan Nadschläger
Modified: 2023-09-29 06:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example of the bug (24.91 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-05-06 05:52 UTC, Stefan Nadschläger
Details
screenshot (209.42 KB, image/png)
2023-09-28 17:39 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Nadschläger 2022-05-06 05:52:05 UTC
Description:
If you set the transparency of x-axis or y-axis in a diagram in calc to 100% and its color to black, it will be applied. But after saving and reopening the document the transparency was not saved.

Steps to Reproduce:
1. Create new calc document
2. Add some sample data
3. Add a diagram (lines)
4. Edit x-axis
5. set font effects: color => black, transparency => 100%
6. Apply and Save the document
7. Close and reopen the document => transparency is back to 0%

Actual Results:
The transparency was not saved and is 0% again.

Expected Results:
The transparency should be saved and still be 100%.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Windows 10.0 Build 22000; UI render: Skia/Raster; VCL: win
Locale: de-AT (de_AT); UI: de-DE
Calc: CL
Comment 1 Stefan Nadschläger 2022-05-06 05:52:30 UTC
Created attachment 179959 [details]
Example of the bug
Comment 2 m_a_riosv 2022-05-08 15:08:57 UTC
You don't need to close the document, sometimes after exit from chart editing, and editing again you can see it. There is an unpredictable behavior depending on the selected color.
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: f8e11c6480ff0005715b989a6d4e2e10a3816cf6
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: threaded
Comment 3 BogdanB 2023-06-01 19:35:33 UTC
Also in
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0fff72154d0dbb44e09546ff59f8a5ec288dfd2e
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 BogdanB 2023-06-01 19:39:38 UTC
In debug LO I get these messages while repeating the steps from this bug:

warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 25917
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 26189
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 26190
warn:legacy.osl:24989:24989:chart2/source/tools/LifeTime.cxx:59: This component is already disposed 
warn:chart2.main:24989:24989:chart2/source/controller/main/ChartController.cxx:185: a well known owner has caught a CloseVetoException after calling close(true)
warn:legacy.osl:24989:24989:chart2/source/tools/LifeTime.cxx:59: This component is already disposed 
warn:chart2:24989:24989:chart2/source/tools/LifeTime.cxx:119: This component is already disposed 
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:chart2.tools:24989:24989:chart2/source/tools/WrappedPropertySet.cxx:137: found no inner property set to map to
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 25917
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 26189
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 26190
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:chart2.tools:24989:24989:chart2/source/tools/WrappedPropertySet.cxx:137: found no inner property set to map to
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-column with mismatching mapper ! P25SvXMLExportPropertyMapper 25SvXMLExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-row with mismatching mapper ! P25SvXMLExportPropertyMapper 25SvXMLExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-cell with mismatching mapper ! P25SvXMLExportPropertyMapper 28XMLShapeExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-column with mismatching mapper ! P25SvXMLExportPropertyMapper 25SvXMLExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-row with mismatching mapper ! P25SvXMLExportPropertyMapper 25SvXMLExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-cell with mismatching mapper ! P25SvXMLExportPropertyMapper 28XMLShapeExportPropertyMapper
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 5
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 2
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 5
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 10
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 2
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 3
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 5
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 2
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 5
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 10
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 2
warn:editeng:24989:24989:editeng/source/uno/unofield.cxx:375: Id service unknown: 3
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-column with mismatching mapper ! P25SvXMLExportPropertyMapper 25SvXMLExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-row with mismatching mapper ! P25SvXMLExportPropertyMapper 25SvXMLExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-cell with mismatching mapper ! P25SvXMLExportPropertyMapper 28XMLShapeExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family graphic with mismatching mapper ! P25SvXMLExportPropertyMapper 28XMLChartExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family paragraph with mismatching mapper ! P25SvXMLExportPropertyMapper 28XMLChartExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family text with mismatching mapper ! P25SvXMLExportPropertyMapper 28XMLChartExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/text/XMLTextListAutoStylePool.cxx:163: getStyleFamilies() from XModel failed for export!
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-column with mismatching mapper ! P25SvXMLExportPropertyMapper 25SvXMLExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-row with mismatching mapper ! P25SvXMLExportPropertyMapper 25SvXMLExportPropertyMapper
warn:xmloff:24989:24989:xmloff/source/style/impastpl.cxx:368: Adding duplicate family table-cell with mismatching mapper ! P25SvXMLExportPropertyMapper 28XMLShapeExportPropertyMapper
warn:legacy.osl:24989:24989:xmloff/source/core/SettingsExportHelper.cxx:176: this type is not implemented now
warn:xmloff:24989:24989:xmloff/source/chart/SchXMLChartContext.cxx:392: unknown attribute http://www.w3.org/1999/xlink xlink:type value=simple
warn:legacy.osl:24989:24989:sc/source/ui/view/tabvwshh.cxx:232: no accessibility broadcaster?
warn:legacy.osl:24989:24989:sc/source/ui/view/tabvwshh.cxx:232: no accessibility broadcaster?
warn:legacy.osl:24989:24989:sc/source/ui/view/tabvwshh.cxx:232: no accessibility broadcaster?
warn:legacy.osl:24989:24989:sc/source/ui/view/tabvwshh.cxx:232: no accessibility broadcaster?
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 25917
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 26189
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 26190
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 25917
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 26189
warn:sfx.control:24989:24989:sfx2/source/control/dispatch.cxx:1211: Childwindow slot missing: 26190
warn:chart2:24989:24989:chart2/source/tools/LifeTime.cxx:119: This component is already disposed 
warn:svl.items:24989:24989:svl/source/items/itempool.cxx:442: old secondary pool: EditEngineItemPool of pool: XOutdevItemPool must be empty.
Comment 5 Kira Tubo 2023-09-20 01:52:06 UTC
Bibisected win64-7.0 repository. Added Miklos Vajna to cc. 

Regression occurring at: 
https://git.libreoffice.org/core/+/b4554b8eddd048532269df610e89ae739c46fab7

Seems that this occurred when Transparency was implemented into the UI for the X/Y Axis menu.

I was able to reproduce consistently following OP's steps. In relation to Comment 2, it seems consistently reproducible with the following:

1. Create new calc doc
2. Add sample data
3. Insert chart
4. Edit x-axis
5. Set Font Color = Automatic (this is the default)
6. Set Transparency = 100%
7. Click OK

OR 

1. Repeat steps 1-4 above
2. Change Font Color to any color other than Automatic or White
3. Set Transparency = 100% 
4. Click OK
5. Edit x-axis
6. Change Font Color to any color other than Automatic or White (Transparency should already be at 100%)
7. Click OK. 

----------------------

commit b4554b8eddd048532269df610e89ae739c46fab7	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Fri Nov 22 17:12:04 2019 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	Fri Nov 22 18:33:39 2019 +0100
tree c373507b685e09ae4f2253274f9175f291650c0d
parent e227d96bbc500afd810064eee64175b800bfc11f [diff]


commit 6da9a6f9bb1b6d95becb71de7d68d326136562f2
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Nov 26 15:54:19 2019 -0800

    source b4554b8eddd048532269df610e89ae739c46fab7

---------------------

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 36163d269bd8f77a86605e4c5ff5adce17b4c66c
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2023-09-26 06:19:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d5a43da338e4afe3630a072351516e39865a1f2f

tdf#148959 cui: fix hiding semi-transparent UI for chart axis font

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-09-28 08:15:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/d260cf4e5b16ac5b80fb1c88d0eea4ba4eefd386

tdf#148959 cui: fix hiding semi-transparent UI for chart axis font

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2023-09-28 17:39:13 UTC
Created attachment 189872 [details]
screenshot

It's strange, I don't have transparency anymore, in order to test the bug.

On the left
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

On the right
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bbe4d3498c2f994342b4d213f0ae874e7b0b7775
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 9 Miklos Vajna 2023-09-29 06:09:18 UTC
That's intentional. The UI was enabled there by accident. Semi-transparent text is supported in Draw shape text and Writer. Everything else is left unchanged. It was a mistake to have the UI for charts where the import/export logic is missing.