tdf#148959 cui: fix hiding semi-transparent UI for chart axis font

Regression from commit b4554b8eddd048532269df610e89ae739c46fab7 (cui:
add UI for semi-transparent shape text, 2019-11-22), the trouble was
that even if semi-transparent text UI is meant to be opt in, we enabled
it by accident also for charts.

This happens because I assumed that we always get a SID_FLAG_TYPE, and
then we can hide the not wanted UI in case SVX_ENABLE_CHAR_TRANSPARENCY
is not in the flags, but even SID_FLAG_TYPE can be missing.

Fix the problem by assuming that in case SID_FLAG_TYPE is not provided,
that means no flags.

An alternative would be to actually add support for semi-transparent
text in chart2/, which is doable, but
chart::wrapper::ItemConverter::ApplyItemSet() assumes that each pool
item can be mapped to exactly one UNO property, which is not the case
for SvxColorItem (it would have to map to CharColor and
CharTransparence), so don't do that yet.

Change-Id: I825ca56b2e03d48c8acff93e1deadf8f86b0dcb0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157258
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>